<?xml version="1.0"?>
<package format="3">
  <name>visual_odometry</name>
  <version>0.0.1</version>
  <description>Visual odometry based path following</description>

  <maintainer email="keiyou0206@gmail.com">Keiyo Nakayama</maintainer>
  <license>MIT</license>


  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
